--- a/weather application/index.html
+++ b/weather application/index.html
@@ -7,7 +7,7 @@
     <title>Weather App</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 ">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Weather Application</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,9 +15,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
               <li class="nav-item">
                 <a class="nav-link active" href="https://rapidapi.com/weatherapi/api/weatherapi-com">About rapid API</a>
               </li>
@@ -27,10 +24,10 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" onclick="showTemp()" id="dropCity">Delhi</a></li>
-                  <li><a class="dropdown-item" onclick="showTemp()" id="dropCity">Bangalore</a></li>
-                  <li><a class="dropdown-item" onclick="showTemp()" id="dropCity">Chennai</a></li>
-                  <li><a class="dropdown-item" onclick="showTemp()" id="dropCity">Hyderabad</a></li>
-                  <li><a class="dropdown-item" onclick="showTemp()" id="dropCity">Mumbai</a></li>
+                  <li><a class="dropdown-item" onclick="showTemp1()" id="dropCity1">Bangalore</a></li>
+                  <li><a class="dropdown-item" onclick="showTemp2()" id="dropCity2">Chennai</a></li>
+                  <li><a class="dropdown-item" onclick="showTemp3()" id="dropCity3">Hyderabad</a></li>
+                  <li><a class="dropdown-item" onclick="showTemp4()" id="dropCity4">Mumbai</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><h6 class="dropdown-item">Other cities? Use Search Box</h6></li>
                 </ul>
@@ -48,34 +45,32 @@
         <main>
             <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
               <div class="col">
-                <div class="card mb-4 rounded-3 shadow-sm">
-                  <div class="card-header py-3">
+                <div class="card mb-4 rounded-3 shadow-sm border-primary">
+                  <div class="card-header py-3 text-bg-primary border-primary">
                     <h4 class="my-0 fw-normal">Temperatures</h4>
                   </div>
                   <div class="card-body">
-                    <h1 class="card-title pricing-card-title"><span id="tempHead"></span><span class="text-muted">°C</span></h1>
+                    <h1 class="card-title pricing-card-title"> <span id="tempHead"></span> <span class="text-muted">°C</span> </h1>
                     <ul class="list-unstyled mt-3 mb-4">
                       <li>Temperature: <span id="temp"></span><span class="text-muted">°C</span></li>
-                      <li>Minimum Temperature: <span id="min_temp"></span><span class="text-muted">°C</span></li>
-                      <li>Maximum Temperature: <span id="max_temp"></span><span class="text-muted">°C</span></li>
+                      <li>Min Temperature: <span id="min_temp"></span><span class="text-muted">°C</span></li>
+                      <li>Max Temperature: <span id="max_temp"></span><span class="text-muted">°C</span></li>
                     </ul>
-                    <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
                   </div>
                 </div>
               </div>
               <div class="col">
-                <div class="card mb-4 rounded-3 shadow-sm">
-                  <div class="card-header py-3">
+                <div class="card mb-4 rounded-3 shadow-sm border-primary">
+                  <div class="card-header py-3 text-bg-primary border-primary">
                     <h4 class="my-0 fw-normal">Humidity</h4>
                   </div>
                   <div class="card-body">
-                    <h1 class="card-title pricing-card-title"><span id="humidity"></span><span class="text-muted">%</span></h1>
+                    <h1 class="card-title pricing-card-title"> <span id="humidityHead"></span> <span class="text-muted">%</span> </h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>Humidity: <span id="humidity"></span><span class="text-muted">%</span></li>
+                        <li>Humidity: <span id="humidity"></span> <span class="text-muted">%</span> </li>
                         <li>Feels Like: <span id="feels_like"></span><span class="text-muted">°C</span></li>
                         <li>Sunrise Time: <span id="sunrise"></li>
                     </ul>
-                    <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
                   </div>
                 </div>
               </div>
@@ -85,114 +80,106 @@
                     <h4 class="my-0 fw-normal">Wind Info</h4>
                   </div>
                   <div class="card-body">
-                    <h1 class="card-title pricing-card-title"><span id="wind_speed"></span><span class="text-muted">km/h</span></h1>
+                    <h1 class="card-title pricing-card-title"><span id="windHead"></span><span class="text-muted">km/h</span></h1>
                     <ul class="list-unstyled mt-3 mb-4">
                         <li>Wind Speed: <span id="wind_speed"></span><span class="text-muted">km/h</span></li>
                         <li>Wind Degrees: <span id="wind_degrees"></span></li>
                         <li>Sunrise Time: <span id="sunset"></span></li>
                     </ul>
-                    <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
                   </div>
                 </div>
               </div>
             </div>
             <h2 class="display-7 text-center mb-1">Popular Cities in World</h2>
             <div class="table-responsive">
-              <table class="table text-center">
+              <table id="table-body" class="table text-center">
                 <thead>
                   <tr>
-                    <th style="width: 10%;"></th>
-                    <th style="width: 5%;">Cloud_Pct </th>
-                    <th style="width: 5%;">Feels_Like </th>
-                    <th style="width: 5%;">Humidity </th>
-                    <th style="width: 5%;">Max_Temp </th>
-                    <th style="width: 5%;">Min_Temp </th>
-                    <th style="width: 5%;">Sunrise </th>
-                    <th style="width: 5%;">Sunset </th>
-                    <th style="width: 5%;">Temp </th>
-                    <th style="width: 5%;">Wind_Degrees</th>
-                    <th style="width: 5%;">Wind_Speed </th>
+                    <th style="width: 12%;"></th>
+                    <th style="width: 7%;">Temp </th>
+                    <th style="width: 7%;">Max_Temp </th>
+                    <th style="width: 7%;">Min_Temp </th>
+                    <th style="width: 7%;">Humidity </th>
+                    <th style="width: 7%;">Feels_Like </th>
+                    <th style="width: 7%;">Sunrise </th>
+                    <th style="width: 7%;">Sunset </th>
+                    <th style="width: 7%;">Wind_Degrees</th>
+                    <th style="width: 7%;">Wind_Speed </th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row" class="text-start">Public</th>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
+                    <th scope="row" class="text-start" id="city1">Japan</th>
+                    <td><span id="japTemp"></span></td>
+                    <td><span id="japMaxTemp"></span></td>
+                    <td><span id="japMinTemp"></span></td>
+                    <td><span id="japHum"></span></td>
+                    <td><span id="japFeel"></span></td>
+                    <td><span id="japRise"></span></td>
+                    <td><span id="japSet"></span></td>
+                    <td><span id="japDegree"></span></td>
+                    <td><span id="japSpeed"></span></td>
+                  </tr>
+                  <!-- <tr>
+                    <th scope="row" class="text-start" id="city2">China</th>
+                    <td><span id="chiTemp"></span></td>
+                    <td><span id="chiMaxTemp"></span></td>
+                    <td><span id="chiMinTemp"></span></td>
+                    <td><span id="chiHum"></span></td>
+                    <td><span id="chiFeel"></span></td>
+                    <td><span id="chiRise"></span></td>
+                    <td><span id="chiSet"></span></td>
+                    <td><span id="chiDegree"></span></td>
+                    <td><span id="chiSpeed"></span></td>
                   </tr>
                   <tr>
-                    <th scope="row" class="text-start">Private</th>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
+                    <th scope="row" class="text-start" id="city3">Australia</th>
+                    <td><span id="ausTemp"></span></td>
+                    <td><span id="ausMaxTemp"></span></td>
+                    <td><span id="ausMinTemp"></span></td>
+                    <td><span id="ausHum"></span></td>
+                    <td><span id="ausFeel"></span></td>
+                    <td><span id="ausRise"></span></td>
+                    <td><span id="ausSet"></span></td>
+                    <td><span id="ausDegree"></span></td>
+                    <td><span id="ausSpeed"></span></td>
                   </tr>
                   <tr>
-                    <th scope="row" class="text-start">Permissions</th>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
+                    <th scope="row" class="text-start" id="city4">South Korea</th>
+                    <td><span id="korTemp"></span></td>
+                    <td><span id="korMaxTemp"></span></td>
+                    <td><span id="korMinTemp"></span></td>
+                    <td><span id="korHum"></span></td>
+                    <td><span id="korFeel"></span></td>
+                    <td><span id="korRise"></span></td>
+                    <td><span id="korSet"></span></td>
+                    <td><span id="korDegree"></span></td>
+                    <td><span id="korSpeed"></span></td>
                   </tr>
                   <tr>
-                    <th scope="row" class="text-start">Sharing</th>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
+                    <th scope="row" class="text-start" id="city5">Saudi Arabia</th>
+                    <td><span id="arabTemp"></span></td>
+                    <td><span id="arabMaxTemp"></span></td>
+                    <td><span id="arabMinTemp"></span></td>
+                    <td><span id="arabHum"></span></td>
+                    <td><span id="arabFeel"></span></td>
+                    <td><span id="arabRise"></span></td>
+                    <td><span id="arabSet"></span></td>
+                    <td><span id="arabDegree"></span></td>
+                    <td><span id="arabSpeed"></span></td>
                   </tr>
                   <tr>
-                    <th scope="row" class="text-start">Sharing</th>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                  </tr>
-                  <tr>
-                    <th scope="row" class="text-start">Sharing</th>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                    <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
-                  </tr>
+                    <th scope="row" class="text-start" id="city6">Russia</th>
+                    <td><span id="rusTemp"></span></td>
+                    <td><span id="rusMaxTemp"></span></td>
+                    <td><span id="rusMinTemp"></span></td>
+                    <td><span id="rusHum"></span></td>
+                    <td><span id="rusFeel"></span></td>
+                    <td><span id="rusRise"></span></td>
+                    <td><span id="rusSet"></span></td>
+                    <td><span id="rusDegree"></span></td>
+                    <td><span id="rusSpeed"></span></td>
+                  </tr> -->
                 </tbody>
               </table>
             </div>
